diesel-builders/tests/ui/discretionary_missing_table_error.stderr
error: Expected table name: #[discretionary(table_name)]
 --> tests/ui/discretionary_missing_table_error.rs:9:5
  |
9 |     #[discretionary]
  |     ^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_table`
 --> tests/ui/discretionary_missing_table_error.rs:5:23
  |
5 | #[diesel(table_name = test_table)]
  |                       ^^^^^^^^^^ use of unresolved module or unlinked crate `test_table`
  |
  = help: if you wanted to use a crate named `test_table`, use `cargo add test_table` to add it to your `Cargo.toml`
